# ComfyUI-FlashFace

./: install_dependencies.py  pyproject.toml  readme.md  requirements-comfy.txt  requirements.txt  setup.bat  setup.sh
.github/: funding.yaml
docs/: improvements.md  installation.md  technical.md
example_workflows/comfyui/: example-workflow.json
examples/comfyui/: example-workflow-batch.json  example-workflow-list.json
flashface/all_finetune/: demo_gradio.py  enhanced_transforms.py  inference.ipynb
flashface/all_finetune/models/: reference_unet.py
flashface/all_finetune/ops/: context_diffusion.py
flashface/models/: __init__.py  model_registry.py
flashface/utils/: __init__.py  cache_utils.py
ldm/: utils.py
ldm/data/: tokenizers.py
ldm/models/: clip.py  retinaface.py  unet.py  vae.py
ldm/ops/: autocast_utils.py  compile_utils.py  diffusion.py  schedules.py  solvers.py  utils.py
ldm/utils/: __init__.py  model_loading.py
nodes/: flashface_detectface.py  flashface_generator.py  flashface_loadmodel.py
